--- a/DayTourSearchEngine/src/view/BookingsWindow.form
+++ b/DayTourSearchEngine/src/view/BookingsWindow.form
@@ -94,6 +94,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jNameTextField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jNameTextFieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jSearchBookings">
       <Properties>
